--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/Cairo-Regular.ttf
+#        - asset: assets/fonts/Cairo-Black.ttf
+#          style: black
+#        - asset: assets/fonts/Cairo-Bold.ttf
+#          style: Bold
+#        - asset: assets/fonts/Cairo-Light.ttf
+#          style: light
+#        - asset: assets/fonts/Cairo-Medium.ttf
+#          style: medium
   # fonts:
   #   - family: Schyler
   #     fonts:
